@@ -19,6 +19,10 @@ Changes since 5/21/15
     - For consistency, rename MOST data struct variables everywhere to
       mdi (input) from Istr, md_in, and mdin, and to mdo (output) from
       Ostr, md_out, and mdout.
+    - Rename md.idx fields for dimensions of dynamic system constraints.
+        nyo  -->  nyds
+        nzd  -->  nzds
+        nyt  -->  ntds
 
 2/22/16
     - (Tentatively) modify md_init() to initialize only what is needed to
